@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Choice.cxx,v 1.10.2.5.2.17 2004/04/29 02:47:09 easysw Exp $"
+// "$Id: Fl_Choice.cxx,v 1.10.2.5.2.18 2004/12/03 02:48:21 easysw Exp $"
 //
 // Choice widget for the Fast Light Tool Kit (FLTK).
 //
@@ -107,13 +107,13 @@ Fl_Choice::Fl_Choice(int X, int Y, int W, int H, const char *l)
 }
 
 int Fl_Choice::value(const Fl_Menu_Item *v) {
-  if (!v) return 0;
   if (!Fl_Menu_::value(v)) return 0;
   redraw();
   return 1;
 }
 
 int Fl_Choice::value(int v) {
+  if (v == -1) return value((const Fl_Menu_Item *)0);
   if (v < 0 || v >= (size() - 1)) return 0;
   if (!Fl_Menu_::value(v)) return 0;
   redraw();
@@ -159,5 +159,5 @@ int Fl_Choice::handle(int e) {
 }
 
 //
-// End of "$Id: Fl_Choice.cxx,v 1.10.2.5.2.17 2004/04/29 02:47:09 easysw Exp $".
+// End of "$Id: Fl_Choice.cxx,v 1.10.2.5.2.18 2004/12/03 02:48:21 easysw Exp $".
 //
